src/test/ui/numeric/numeric-suffix/numeric-suffix-u32.stderr
error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:6:16
   |
LL |     foo::<u32>(42_usize);
   |                ^^^^^^^^ expected `u32`, found `usize`
   |
help: change the type of the numeric literal from `usize` to `u32`
   |
LL |     foo::<u32>(42_u32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:9:16
   |
LL |     foo::<u32>(42_u64);
   |                ^^^^^^ expected `u32`, found `u64`
   |
help: change the type of the numeric literal from `u64` to `u32`
   |
LL |     foo::<u32>(42_u32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:13:16
   |
LL |     foo::<u32>(42_u16);
   |                ^^^^^^ expected `u32`, found `u16`
   |
help: change the type of the numeric literal from `u16` to `u32`
   |
LL |     foo::<u32>(42_u32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:16:16
   |
LL |     foo::<u32>(42_u8);
   |                ^^^^^ expected `u32`, found `u8`
   |
help: change the type of the numeric literal from `u8` to `u32`
   |
LL |     foo::<u32>(42_u32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:19:16
   |
LL |     foo::<u32>(42_isize);
   |                ^^^^^^^^ expected `u32`, found `isize`
   |
help: change the type of the numeric literal from `isize` to `u32`
   |
LL |     foo::<u32>(42_u32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:22:16
   |
LL |     foo::<u32>(42_i64);
   |                ^^^^^^ expected `u32`, found `i64`
   |
help: change the type of the numeric literal from `i64` to `u32`
   |
LL |     foo::<u32>(42_u32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:25:16
   |
LL |     foo::<u32>(42_i32);
   |                ^^^^^^ expected `u32`, found `i32`
   |
help: change the type of the numeric literal from `i32` to `u32`
   |
LL |     foo::<u32>(42_u32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:28:16
   |
LL |     foo::<u32>(42_i16);
   |                ^^^^^^ expected `u32`, found `i16`
   |
help: change the type of the numeric literal from `i16` to `u32`
   |
LL |     foo::<u32>(42_u32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:31:16
   |
LL |     foo::<u32>(42_i8);
   |                ^^^^^ expected `u32`, found `i8`
   |
help: change the type of the numeric literal from `i8` to `u32`
   |
LL |     foo::<u32>(42_u32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:34:16
   |
LL |     foo::<u32>(42.0_f64);
   |                ^^^^^^^^ expected `u32`, found `f64`
   |
help: change the type of the numeric literal from `f64` to `u32`
   |
LL |     foo::<u32>(42u32);
   |                  ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-u32.rs:37:16
   |
LL |     foo::<u32>(42.0_f32);
   |                ^^^^^^^^ expected `u32`, found `f32`
   |
help: change the type of the numeric literal from `f32` to `u32`
   |
LL |     foo::<u32>(42u32);
   |                  ~~~

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0308`.
